--- a/WEB/index.html
+++ b/WEB/index.html
@@ -48,7 +48,8 @@
     </section>
     <footer>
         <section>
-            <a href="mailto:mirandapm@gmail.com">contactame aqui</a>
+            <a href="../WEB/contacto/contacto.html">Contactame aqui</a> <br>
+            <a href="mailto:mirandapm@gmail.com">Mail directo</a>
             <p>copyright 2024</p>
         </section>
     </footer>
