--- a/WEB/contacto/contacto.html
+++ b/WEB/contacto/contacto.html
@@ -4,38 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
+</head>
 <body>
     <header>
         <h1>Contacto</h1>
     </header>
-    <section class="container">
-        <form action="enviar_mensaje.php" method="POST">
-            <div class="form-group">
-                <label for="nombre">Nombre:</label>
-                <input type="text" id="nombre" name="nombre" required>
-            </div>
-            <div class="form-group">
-                <label for="apellido">Apellido:</label>
-                <input type="text" id="apellido" name="apellido" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Correo electrónico:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="mensaje">Mensaje:</label>
-                <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
-            </div>
-            <button type="submit">Enviar mensaje</button>
-        </form>
-    </section>
+    <div class="container">
+        <section>
+            <article>
+                <h2>Información de Contacto</h2>
+                <p>Correo: mirandapm@gmail.com<br>
+                    Telefono: 11 23456789</p>
+                
+            </article>
+        </section>
+        <section>
+            <article class="form-article">
+                <h2>Enviame un Mensaje</h2>
+                <form class="contacto">
+                    <label for="name">Nombre:</label>
+                    <input type="text" id="name" name="name" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="mensaje">Mensaje:</label>
+                    <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
+                    <input type="submit" value="Enviar">
+                </form>
+            </article>
+        </section>
+    </div>
     <footer>
         <section>
-            <p><a href="index.html">Volver al inicio</a></p>
+            <p>&copy; 2024 | Contacto</p>
+            <p><a href="#">Aviso Legal</a> | <a href="#">Política de Privacidad</a></p>
         </section>
     </footer>
 </body>
